# TMPS_Lab1

./: Adapter.h  CMakeLists.txt  Command.h  DIP.h  Decorator.h  Facade.h  ISP.h  LSP.h  OCP_Prototype.h  ObjectPooling.h  Observer.h  README.md  SRP.h  Singleton.h  main.cpp
